; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_mmp.c_ext2fs_mmp_update2.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_mmp.c_ext2fs_mmp_update2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i64, %struct.TYPE_7__*, %struct.mmp_struct*, %struct.mmp_struct* }
%struct.TYPE_7__ = type { i32 }
%struct.mmp_struct = type { i64, i32 }

@EXT2_FLAG_RW = common dso_local global i32 0, align 4
@EXT2_FLAG_SKIP_MMP = common dso_local global i32 0, align 4
@EXT2_ET_OP_NOT_SUPPORTED = common dso_local global i64 0, align 8
@EXT2_ET_MMP_CHANGE_ABORT = common dso_local global i64 0, align 8
@EXT2_MIN_MMP_UPDATE_INTERVAL = common dso_local global i64 0, align 8
@EXT4_MMP_SEQ_FSCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ext2fs_mmp_update2(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca %struct.TYPE_6__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %7 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 2
  %8 = load %struct.TYPE_7__*, %struct.TYPE_7__** %7, align 8
  %9 = call i32 @ext2fs_has_feature_mmp(%struct.TYPE_7__* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %25

11:                                               ; preds = %2
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = load i32, i32* @EXT2_FLAG_RW, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %25

18:                                               ; preds = %11
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %4, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 8
  %22 = load i32, i32* @EXT2_FLAG_SKIP_MMP, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %18, %11, %2
  store i64 0, i64* %3, align 8
  br label %28

26:                                               ; preds = %18
  %27 = load i64, i64* @EXT2_ET_OP_NOT_SUPPORTED, align 8
  store i64 %27, i64* %3, align 8
  br label %28

28:                                               ; preds = %26, %25
  %29 = load i64, i64* %3, align 8
  ret i64 %29
}

declare dso_local i32 @ext2fs_has_feature_mmp(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
